tcw3/designer/tests/bad/objinit_field_dupe.tcwdl
pub comp crate::Comp1 {
    prop field: u32;
}
pub comp crate::Comp2 {
    const comp1: crate::Comp1 = crate::Comp1 {
        // `Comp1::field` is specified twice
        prop field = || 42;
        prop field = || 42;
    };
}
